--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,20 +17,19 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-secondary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Inicio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"></a>
+                        <a class="nav-link active" aria-current="page" href="/"></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/">Impresoras lista</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/planos">Plano Municipal</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/internostel">Teléfono Internos</a>
                     </li>
                 </ul>
             </div>
@@ -79,7 +78,7 @@
                             <a type="button" class="btnEdit btn btn-outline-info mt-4 icon-cus">
                                 <i class='bx bxs-edit bx-xs'></i>
                             </a>
-                            <a href="/delete/<%= impresora._id %>" class="btn btn-outline-danger mt-4 icon-cus" onclick="return confirm('¿Estás seguro de que quieres eliminar esta impresora?')">
+                            <a href="/deleteImpresora/<%= impresora._id %>" class="btn btn-outline-danger mt-4 icon-cus" onclick="return confirm('¿Estás seguro de que quieres eliminar esta impresora?')">
                                 <i class='bx bx-trash bx-xs'></i>
                             </a>
                         </td>
@@ -101,7 +100,7 @@
                         <div class="card border-secondary">
                             <div class="card-header">Editar impresora</div>
                             <div class="card-body">
-                                <form action="/edit" method="POST">
+                                <form action="/editImpresora" method="POST">
                                     <input type="text" id="id_edit" name="id_edit" hidden>
                                     <label for="establecimiento" class="form-label">Tipo de establecimiento:</label>
                                     <select class="form-select" aria-label="Default select example" name="establecimiento_edit" id="establecimiento_edit">
@@ -153,7 +152,7 @@
                 </div>
                 <div class="modal-body">
                     <!-- Formulario para agregar nueva impresora -->
-                    <form action="/create" id="formAgregarImpresora" method="POST">
+                    <form action="/createImpresora" id="formAgregarImpresora" method="POST">
                         <div class="mb-3">
                             <label for="establecimiento" class="form-label">Tipo de Establecimiento</label>
                             <select class="form-select" id="establecimiento" name="establecimiento" required>
@@ -200,6 +199,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Tu archivo JS personalizado -->
     <script type="module" src="/resources/js/busqueda.js"></script>
-    <script src="/resources/js/code.js"></script>
+    <script type="module" src="/resources/js/impresoras.js"></script>
+
 </body>
 </html>
