--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/internostel">Teléfono Internos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/domainip">Dominio ip</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/comprobante">Comprobantes</a>
+                    </li>
                 </ul>
             </div>
         </div>
