--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,37 +26,52 @@
 }
 
 
-        /* Estilos para el fondo oscuro del lightbox */
-        .lightbox {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            z-index: 1;
-        }
+    /* Estilos para el fondo oscuro del lightbox */
+.lightbox {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+    }
 
         /* Estilos para el contenedor del pop-up */
-        .lightbox-content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: #fff;
-            padding: 20px;
-            z-index: 2;
-            text-align: right;
-        }
+.lightbox-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    padding: 20px;
+    z-index: 2;
+    text-align: right;
+    }
 
         /* Estilos para la imagen en el pop-up */
-        .lightbox-image {
-            max-width: 100%;
-            max-height: 100%;
-        }
+.lightbox-image {
+    max-width: 100%;
+    max-height: 100%;
+    }
+
 
         /* Estilos para el botón de cierre */
-        .close-button {
+        .btnPrint {
             cursor: pointer;
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;
+            border-radius: 0.25rem;
+            padding: 0.25rem 0.5rem;
+            font-size: 0.875rem;
+            line-height: 1.5;
+            text-align: center;
+            white-space: nowrap;
+            vertical-align: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
