Se creo una nueva rama

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,8 @@
 
     <!-- Tu archivo CSS personalizado -->
     <link rel="stylesheet" href="/resources/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-secondary">
