--- a/views/internostel.ejs
+++ b/views/internostel.ejs
@@ -41,7 +41,8 @@
 <div class="container">
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
         <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" id="busqueda" placeholder="Buscar telefono" data-table="table" aria-label="Buscar telefono">
+            <input class="form-control me-2" type="search" id="busqueda" placeholder="Buscar impresora" data-table="table" aria-label="Buscar impresora">
+            <!-- <input class="form-control me-2" type="search" id="busqueda" placeholder="Buscar telefono" data-table="table" aria-label="Buscar telefono"> -->
         </form>
         <a id="btnAgregarTelefono" href="#" class="btn btn-primary">Agregar telefono</a>
     </div>
