--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,9 +46,12 @@
 <div class="container">
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <form class="d-flex" role="search">
-                <select id="filtro" onchange="filtrarPorEstablecimiento()">
+                <select id="filtro"">
+                    <option value="todos">Todos</option>
+                    <hr>
                     <option value="Municipalidad">Municipalidad</option>
                     <option value="Hospital">Hospital</option>
+                    <hr>
                     <option value="Juzgado">Juzgado</option>
                     <option value="Licencia de conducir">Licencia de Conducir</option>
                     <option value="Desarrollo social">Desarrollo Social</option>
@@ -166,6 +169,7 @@
                             <select class="form-select" id="establecimiento" name="establecimiento" required>
                                 <option value="Municipalidad">Municipalidad</option>
                                 <option value="Hospital">Hospital</option>
+                                <hr>
                                 <option value="Juzgado">Juzgado</option>
                                 <option value="Licencia de conducir">Licencia de Conducir</option>
                                 <option value="Desarrollo social">Desarrollo Social</option>
@@ -196,12 +200,7 @@
         </div>
 </div>
 <a id="back-top" href='#top'>Volver</a>
-    <script>
-            function validarFormulario() {
-        console.log("Establecimiento seleccionado:", document.getElementById('establecimiento').value);
-        return true;  // Puedes cambiar esto a false para evitar que se envíe el formulario y ver la salida en la consola.
-    }
-    </script>
+
 <!-- Bootstrap JS (Bundle que incluye Popper) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <!-- jQuery -->
