Acomo de pdfGenerator y css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+body{
+    background: rgb(29 36 52);
+    color: azure;
+}
 .container table{
     text-align: center;
 }
@@ -86,6 +90,10 @@ html {
     scroll-behavior: smooth;
 }
 
+.nbar_style{
+    color: azure;
+}
+
 #back-top {
     padding: 10px;
     background: white;
@@ -100,4 +108,13 @@ html {
     word-wrap: break-word;
     white-space: pre-line;  
     font-size: 1rem;
+}
+
+.modal-header, .modal-body{
+    color: azure;
+    background-color: #444;
+}
+
+.observacion1{
+    font-size: 2.5rem;
 }
