--- a/views/internostel.ejs
+++ b/views/internostel.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/resources/css/style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-secondary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nbar_style">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -41,7 +41,7 @@
 <div class="container">
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
         <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" id="busqueda" placeholder="Buscar impresora" data-table="table" aria-label="Buscar impresora">
+            <input class="form-control me-2" type="search" id="busqueda" placeholder="Buscar telefono" data-table="table" aria-label="Buscar telefono">
             <!-- <input class="form-control me-2" type="search" id="busqueda" placeholder="Buscar telefono" data-table="table" aria-label="Buscar telefono"> -->
         </form>
         <a id="btnAgregarTelefono" href="#" class="btn btn-primary">Agregar telefono</a>
