--- a/views/comprobante.ejs
+++ b/views/comprobante.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/resources/css/style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-secondary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nbar_style">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -40,13 +40,14 @@
 </nav>
 <div class="container">
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <button id="ordenar-btn">Ordenar por Fecha</button>
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" id="busqueda" placeholder="Buscar comprobante" data-table="table" aria-label="Buscar comprobante">
         </form>
         <a id="btnAgregarComprobante" href="#" class="btn btn-primary">Agregar nuevo comprobante</a>
     </div>
 </div>
-<!-- Tabla de Dominio -->
+<!-- Tabla de Comprobante -->
 <div class="container">
     <h4 style="text-align: center;">Historial de comprobantes</h4>
         <table data-table="table" id="tablaComprobante" class="table table-bordered border-dark">
@@ -78,7 +79,6 @@
 
                             <% } %>
                         </td>
-                                   
                         <td scoope="col"><% if (comprobante.fecha) { %>
                             <% const fechaFormateada = comprobante.fecha.split('-').reverse().join('/'); %>
                             <%= fechaFormateada %>
@@ -90,6 +90,7 @@
                             <a href="/pdfComprobante/<%= comprobante._id %>" class="btnPrint btn btn-outline-success mt-4 icon-cus"  onclick="return confirm('¿Estás seguro de que quieres imprimir este comprobante?')">
                                 <i class='bx bx-printer bx-xs'></i>
                             </a>
+                            
                             <a type="button" class="btnEdit btn btn-outline-info mt-4 icon-cus">
                                 <i class='bx bxs-edit bx-xs'></i>
                             </a>
@@ -128,7 +129,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="observacion" class="form-label">Observacion sobre el equipo</label>
-                        <input type="text" class="form-control" id="observacion" name="observacion">
+                        <input type="text" class="form-control observacion1" id="observacion" name="observacion">
                     </div>
                     <div class="mb-3">
                         <label for="fecha" class="form-label">Fecha</label>
@@ -202,6 +203,7 @@
 <!-- Tu archivo JS personalizado -->
 <script type="module" src="/resources/js/comprobante.js"></script>
 <script type="module" src="/resources/js/busqueda.js"></script>
+<script type="module" src="/resources/js/filtro.js"></script>
 <script src="/resources/js/pdfGenerator.js"></script>
 
 </body>
