--- a/views/domainip.ejs
+++ b/views/domainip.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/resources/css/style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-secondary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nbar_style">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -41,7 +41,7 @@
 <div class="container">
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
         <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" id="busqueda" placeholder="Buscar ip" data-table="table" aria-label="Buscar ip">
+            <input class="form-control me-2" type="search" id="busqueda" placeholder="Buscar ip" data-table="table" aria-label="Buscar Ip">
         </form>
         <a id="btnAgregarDomainip" href="#" class="btn btn-primary">Agregar nueva ip</a>
     </div>
@@ -57,6 +57,7 @@
                     <th>Hostname</th>
                     <th>Nombre de usuario</th>
                     <th>Observacion</th>
+                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody class="table table-secondary table-hover table-cus">
