--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-secondary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nbar_style">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
